--- a/web/reservations.html
+++ b/web/reservations.html
@@ -4,13 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<script src="https://www.w3schools.com/lib/w3.js"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
-<style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Anton", sans-serif} 
-</style>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HSK629FVWS"></script>
 <script>
@@ -20,33 +18,26 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Anton", sans-serif}
 
   gtag('config', 'G-HSK629FVWS');
 </script>
+
 <body>
+    <header class="w3-padding-16"><h1>The Haukai</h1></header>
 <!-- Start Content -->
 <div id="home" class="w3-content">
-    
 
 <!-- Navbar (Sits on top) -->
-<div class="w3-top w3-bar w3-xlarge w3-black w3-opacity-min">
-<a href="home.html" class="w3-bar-item w3-button">HOME</a>
-<a href="contact.html" class="w3-bar-item w3-button">CONTACT</a>
-<a href="hours.html" class="w3-bar-item w3-button">HOURS</a>
-<a href="menu.html" class="w3-bar-item w3-button">MENU</a>
-<a href="reservations.html" class="w3-bar-item w3-button">BOOKINGS</a>
-<a href="private/roster.html" class="w3-bar-item w3-button">ROSTER</a>
+<div class="w3-bar w3-xlarge w3-black w3-opacity-min">
+    <a href="home.html" class="w3-bar-item w3-button">HOME</a>
+    <a href="contact.html" class="w3-bar-item w3-button">CONTACT</a>
+    <a href="hours.html" class="w3-bar-item w3-button">HOURS</a>
+    <a href="menu.html" class="w3-bar-item w3-button">MENU</a>
+    <a href="reservations.html" class="w3-bar-item w3-button">BOOKINGS</a>
+</div>
+<div class="w3-display-container w3-center">
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSePLLMQxr2V8RFuVhSGMimK0Qzw3xw8KW-m7rnUBOqWsEaJqg/viewform?embedded=true" width="100%" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
 
-<!-- Header image -->
-<div style="height:950px;background-image:url('https://i.picsum.photos/id/292/960/540.jpg?hmac=Jy3FO5HDKuRymP8-6a3lpfmOca63I79zPYN2Ij5AlOM');background-size:cover" class="w3-display-container  w3-grayscale-min">
-<div class="w3-display-middle w3-center">
-<span class="w3-text-black" style="font-size:100px; line-height:1">The<br>Haukai</span>
-<p><a href="menu.html" class="w3-button w3-xxlarge w3-black">Let me see the menu</a></p>
-</div>
-</div>
-
-<!-- End Content -->
 </div>
 </body>
-
 <footer class="w3-container w3-black w3-center w3-xlarge">
     <p>© Haukai Restaraunts Group 2022</p>
     <p><a href="privacy.html">Privacy Policy</a></p>
