--- a/web/home.html
+++ b/web/home.html
@@ -12,13 +12,13 @@
 body,h1,h2,h3,h4,h5,h6 {font-family: "Anton", sans-serif} 
 </style>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HSK629FVWS"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GZGM00CHJ9"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HSK629FVWS');
+  gtag('config', 'G-GZGM00CHJ9');
 </script>
 <body>
 <!-- Start Content -->
