--- a/web/hours.html
+++ b/web/hours.html
@@ -10,13 +10,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HSK629FVWS"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GZGM00CHJ9"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HSK629FVWS');
+  gtag('config', 'G-GZGM00CHJ9');
 </script>
 
 <body>
@@ -31,6 +31,7 @@
     <a href="hours.html" class="w3-bar-item w3-button">HOURS</a>
     <a href="menu.html" class="w3-bar-item w3-button">MENU</a>
     <a href="reservations.html" class="w3-bar-item w3-button">BOOKINGS</a>
+    <a href="private/roster.html" class="w3-bar-item w3-button">ROSTER</a>
 </div>
 <div class="w3-display-container w3-center">
     <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Pacific%2FAuckland&src=Y2FtcGJlbGwyQG91dGxvb2suY28ubno&src=bGw0aTVkN3FkZzJjNzh1aTJyczQwNXBjY29AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=Y2FtcGJlbGxyb3dhdHRAb3V0bG9vay5jb20&color=%23039BE5&color=%23B39DDB&color=%2333B679&color=%23AD1457" style="border:solid 1px #777" width="100%" height="700" frameborder="0" scrolling="no"></iframe>
