--- a/web/privacy.html
+++ b/web/privacy.html
@@ -10,13 +10,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HSK629FVWS"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GZGM00CHJ9"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HSK629FVWS');
+  gtag('config', 'G-GZGM00CHJ9');
 </script>
 
 <body>
@@ -32,6 +32,7 @@
 <a href="hours.html" class="w3-bar-item w3-button">HOURS</a>
 <a href="menu.html" class="w3-bar-item w3-button">MENU</a>
 <a href="reservations.html" class="w3-bar-item w3-button">BOOKINGS</a>
+<a href="private/roster.html" class="w3-bar-item w3-button">ROSTER</a>
 </div>
 
 <!-- Header image -->
