--- a/web/private/roster.html
+++ b/web/private/roster.html
@@ -10,13 +10,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../styles.css">
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HSK629FVWS"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GZGM00CHJ9"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HSK629FVWS');
+  gtag('config', 'G-GZGM00CHJ9');
 </script>
 
 <body>
@@ -26,11 +26,11 @@
 
 <!-- Navbar (Sits on top) -->
 <div class="w3-bar w3-xlarge w3-black w3-opacity-min">
-    <a href="home.html" class="w3-bar-item w3-button">HOME</a>
-    <a href="contact.html" class="w3-bar-item w3-button">CONTACT</a>
-    <a href="hours.html" class="w3-bar-item w3-button">HOURS</a>
-    <a href="menu.html" class="w3-bar-item w3-button">MENU</a>
-    <a href="reservations.html" class="w3-bar-item w3-button">BOOKINGS</a>
+    <a href="../home.html" class="w3-bar-item w3-button">HOME</a>
+    <a href="../contact.html" class="w3-bar-item w3-button">CONTACT</a>
+    <a href="../hours.html" class="w3-bar-item w3-button">HOURS</a>
+    <a href="../menu.html" class="w3-bar-item w3-button">MENU</a>
+    <a href="../reservations.html" class="w3-bar-item w3-button">BOOKINGS</a>
 </div>
 <div class="w3-display-container w3-center w3-text-white">
     <h2>Contact Details:</h2>
