--- a/web/reservations.html
+++ b/web/reservations.html
@@ -10,13 +10,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HSK629FVWS"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GZGM00CHJ9"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-HSK629FVWS');
+  gtag('config', 'G-GZGM00CHJ9');
 </script>
 
 <body>
@@ -31,6 +31,7 @@
     <a href="hours.html" class="w3-bar-item w3-button">HOURS</a>
     <a href="menu.html" class="w3-bar-item w3-button">MENU</a>
     <a href="reservations.html" class="w3-bar-item w3-button">BOOKINGS</a>
+    <a href="private/roster.html" class="w3-bar-item w3-button">ROSTER</a>
 </div>
 <div class="w3-display-container w3-center">
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSePLLMQxr2V8RFuVhSGMimK0Qzw3xw8KW-m7rnUBOqWsEaJqg/viewform?embedded=true" width="100%" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
