--- a/web/home.html
+++ b/web/home.html
@@ -11,6 +11,7 @@
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Anton", sans-serif} 
 </style>
+<head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GZGM00CHJ9"></script>
 <script>
@@ -20,6 +21,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Anton", sans-serif}
 
   gtag('config', 'G-GZGM00CHJ9');
 </script>
+</head>
 <body>
 <!-- Start Content -->
 <div id="home" class="w3-content">
