--- a/web/home.html
+++ b/web/home.html
@@ -13,15 +13,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Anton", sans-serif}
 </style>
 <head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GZGM00CHJ9"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=331720458"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-GZGM00CHJ9');
+  gtag('config', '331720458');
 </script>
-</head>
+<head/>
 <body>
 <!-- Start Content -->
 <div id="home" class="w3-content">
