--- a/web/home.html
+++ b/web/home.html
@@ -21,7 +21,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Anton", sans-serif}
 
   gtag('config', '331720458');
 </script>
-<head/>
+</head>
 <body>
 <!-- Start Content -->
 <div id="home" class="w3-content">
