--- a/web/contact.html
+++ b/web/contact.html
@@ -9,6 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
+<head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GZGM00CHJ9"></script>
 <script>
@@ -36,6 +37,7 @@ console.log("initMap 2");
 window.initMap = initMap;
 
 </script>
+</head>
 <body>
 <!-- Start Content -->
 <header class="w3-padding-16"><h1>The Haukai</h1></header>
