--- a/web/menu.html
+++ b/web/menu.html
@@ -9,6 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
+<head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GZGM00CHJ9"></script>
 <script>
@@ -18,6 +19,7 @@
 
   gtag('config', 'G-GZGM00CHJ9');
 </script>
+</head>
 
 <body>
   <header class="w3-padding-16"><h1>The Haukai</h1></header>
